--- a/tests/dummy/app/templates/addon-components/index.hbs
+++ b/tests/dummy/app/templates/addon-components/index.hbs
@@ -1,19 +1,19 @@
-<section class="panel panel-primary">
+<section class="card">
 
 
-  <hgroup class="panel-heading">
-    <h3 class="panel-title">Components</h3>
-  </hgroup>
+  <h3 class="card-header bg-primary text-light rounded-top">
+    Components
+  </h3>
 
 
   <nav class="list-group">
-    {{#link-to "addon-components.froala-editor" class="list-group-item"}}
+    {{#link-to "addon-components.froala-editor" class="list-group-item list-group-item-action rounded-0"}}
       <code>&#123;&#123;froala-editor&#125;&#125;</code>
     {{/link-to}}
-    {{#link-to "addon-components.froala-content" class="list-group-item"}}
+    {{#link-to "addon-components.froala-content" class="list-group-item list-group-item-action"}}
       <code>&#123;&#123;froala-content&#125;&#125;</code>
     {{/link-to}}
   </nav>
 
 
-</section>{{!-- .panel --}}
+</section>{{!-- .card --}}
