--- a/tests/dummy/app/templates/addon-helpers/index.hbs
+++ b/tests/dummy/app/templates/addon-helpers/index.hbs
@@ -1,19 +1,19 @@
-<section class="panel panel-primary">
+<section class="card">
 
 
-  <hgroup class="panel-heading">
-    <h3 class="panel-title">Helpers</h3>
-  </hgroup>
+  <h3 class="card-header bg-primary text-light rounded-top">
+    Helpers
+  </h3>
 
 
   <nav class="list-group">
-    {{#link-to "addon-helpers.froala-method" class="list-group-item"}}
+    {{#link-to "addon-helpers.froala-method" class="list-group-item list-group-item-action rounded-0"}}
       <code>(froala-method)</code>
     {{/link-to}}
-    {{#link-to "addon-helpers.merged-hash" class="list-group-item"}}
+    {{#link-to "addon-helpers.merged-hash" class="list-group-item list-group-item-action"}}
       <code>(merged-hash)</code>
     {{/link-to}}
   </nav>
 
 
-</section>{{!-- .panel --}}
+</section>{{!-- .card --}}
