--- a/tests/dummy/app/templates/addon/installation.hbs
+++ b/tests/dummy/app/templates/addon/installation.hbs
@@ -1,10 +1,11 @@
-<section class="panel panel-default">
-  <div class="panel-body">
+<section class="card">
+  <div class="card-body">
 
 
-    <div class="page-header"><h1 class="h3">
+    <h1 class="card-title">
       Addon Installation
-    </h1></div>
+    </h1>
+    <hr />
 
 
     <p class="lead">
@@ -14,13 +15,13 @@
     </p>
 
 
-    <pre>ember install ember-froala-editor</pre>
+    <pre class="bg-light border rounded p-2 text-dark">ember install ember-froala-editor</pre>
 
 
     <p>
-      A dependency for <code><a href="https://github.com/martndemus/ember-font-awesome" target="_blank">ember-font-awesome</a></code> will be added to your projects <code>package.json</code> to satisfy the <a href="https://www.froala.com/wysiwyg-editor/docs/overview#backend" target="_blank">Font Awesome requirement</a>. The Froala Editor files will be imported directly from this addons dependency for <code>froala-editor</code>. And at this point jQuery is required for Ember, so there is no need to add a jQuery dependency.
+      A dependency for <code class="bg-light text-dark"><a href="https://github.com/martndemus/ember-font-awesome" target="_blank">ember-font-awesome</a></code> will be added to your projects <code class="bg-light text-dark">package.json</code> to satisfy the <a href="https://www.froala.com/wysiwyg-editor/docs/overview#backend" target="_blank">Font Awesome requirement</a>. The Froala Editor files will be imported directly from this addons dependency for <code class="bg-light text-dark">froala-editor</code>. And at this point jQuery is required for Ember, so there is no need to add a jQuery dependency.
     </p>
 
 
-  </div>{{!-- .panel-body --}}
-</section>{{!-- .panel --}}
+  </div>{{!-- .card-body --}}
+</section>{{!-- .card --}}
