--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,55 +1,51 @@
 {{#header-navbar}}
 
 
-  <div class="navbar-header">
+  {{#link-to "index" class="navbar-brand p-0"}}
+    <img src="{{concat (rooturl) 'ember-froala-editor.png'}}"
+      alt="Ember.js Froala Editor Logos"
+      width="132" height="64"
+      class="d-inline-block d-sm-none" />
+    <img src="{{concat (rooturl) 'ember-logo.png'}}"
+      alt="Ember.js Logo"
+      width="141" height="64"
+      class="d-none d-sm-inline-block" />
+    <img src="{{concat (rooturl) 'froala-logo.svg'}}"
+      alt="Froala Logo"
+      width="301" height="64"
+      class="d-none d-sm-inline-block" />
+  {{/link-to}}
 
-
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#app-navbar-collapse" aria-expanded="false">
-      <span class="sr-only">Toggle Navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-
-
-    {{#link-to "index" class="navbar-brand"}}
-      <img src="{{concat (rooturl) 'ember-froala-editor.png'}}"
-        alt="Ember.js Froala Editor Logos"
-        width="132" height="64"
-        class="visible-xs-inline-block" />
-      <img src="{{concat (rooturl) 'ember-logo.png'}}"
-        alt="Ember.js Logo"
-        width="141" height="64"
-        class="hidden-xs" />
-      <img src="{{concat (rooturl) 'froala-logo.svg'}}"
-        alt="Froala Logo"
-        width="301" height="64"
-        class="hidden-xs" />
-    {{/link-to}}
-
-
-  </div>{{!-- .navbar-header --}}
+  <button type="button"
+    class="navbar-toggler"
+    data-toggle="collapse"
+    data-target="#app-navbar-collapse"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle Navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
 
   <div class="navbar-collapse collapse" id="app-navbar-collapse">
 
 
-    <ul class="navbar-nav nav visible-xs-block">
-      <li>{{link-to "Addon Information" "addon.index"}}</li>
-      <li>{{link-to "Included Components" "addon-components.index"}}</li>
-      <li>{{link-to "Included Helpers" "addon-helpers.index"}}</li>
-    </ul>
+    <nav class="navbar-nav d-flex d-md-none">
+      {{link-to "Addon Information" "addon.index" class="nav-item nav-link"}}
+      {{link-to "Included Components" "addon-components.index" class="nav-item nav-link"}}
+      {{link-to "Included Helpers" "addon-helpers.index" class="nav-item nav-link"}}
+    </nav>
 
 
-    <p class="navbar-text navbar-right hidden-xs">
+    <span class="navbar-text d-none d-md-inline-block ml-auto">
       v{{app-version hideSha=true}}
-      <a href="https://github.com/froala/ember-froala-editor" target="_blank" class="navbar-link">
-        <i class="fa fa-github-square"></i>
+      <a href="https://github.com/froala/ember-froala-editor" target="_blank" class="text-decoration-none">
+        <i class="fa fa-github-square fa-3x align-middle"></i>
       </a>
-      <a href="https://www.froala.com/wysiwyg-editor/" target="_blank" class="navbar-link">
-        <img src="{{concat (rooturl) 'froala-icon.png'}}" alt="Froala Icon" width="30" height="30" class="img-rounded" />
+      <a href="https://www.froala.com/wysiwyg-editor/" target="_blank" class="text-decoration-none">
+        <img src="{{concat (rooturl) 'froala-icon.png'}}" alt="Froala Icon" width="33" height="33" class="rounded" />
       </a>
-    </p>
+    </span>
 
 
   </div>{{!-- .navbar-collapse --}}
@@ -58,30 +54,30 @@
 {{/header-navbar}}
 
 
-<div class="container">
-  <div class="row">
+<div class="container pt-3 pb-3 m-print-0 p-print-0">
+  <div class="row small-gutters">
 
 
     {{!-- Left side bar for navigation on tablets+ --}}
-    <aside class="col-sm-4 col-md-3 hidden-xs"><div class="affix">
+    <aside class="col-md-4 col-lg-3 d-none d-md-block d-print-none">
       {{partial "addon/index"}}
       {{partial "addon-components/index"}}
       {{partial "addon-helpers/index"}}
-    </div></aside>
+    </aside>
 
 
-    <main class="col-sm-8 col-md-9">
-      {{liquid-outlet}}
+    <main class="col-md-8 col-lg-9 col-print-12">
+      {{outlet}}
     </main>
 
 
   </div>{{!-- .row --}}
 
 
-  <footer class="text-center">
+  <footer class="text-center mt-3">
     <small class="text-muted">
       Ember logo's are registered trademarks of Tilde Inc.
-      <span class="visible-xs-inline"><br /></span>
+      <span class="d-inline d-sm-none"><br /></span>
       Froala logo's are owned by Froala Labs SRL.
     </small>
   </footer>
