--- a/tests/dummy/app/templates/components/back-button.hbs
+++ b/tests/dummy/app/templates/components/back-button.hbs
@@ -1,2 +1,2 @@
-<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+<i class="fa fa-chevron-left" aria-hidden="true"></i>
 <span class="sr-only">Back</span>
