--- a/tests/dummy/app/templates/components/top-button.hbs
+++ b/tests/dummy/app/templates/components/top-button.hbs
@@ -1,2 +1,2 @@
-<span class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+<i class="fa fa-chevron-up" aria-hidden="true"></i>
 <span class="sr-only">Top</span>
