--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,12 +1,15 @@
-<section class="panel panel-default">
-  <div class="panel-body">
+<section class="card">
+  <div class="card-body">
 
 
-    <div class="page-header"><h1 class="h3">ember-froala-editor</h1></div>
+    <h1 class="card-title">
+      ember-froala-editor
+    </h1>
+    <hr />
 
 
     <p class="lead">
-      Bring the <a href="https://www.froala.com/wysiwyg-editor" target="_blank">Froala WYSIWYG Editor</a> into an ember-cli project with this addon. Besides importing the required Froala Editor files, the <em>main</em> part of this addon is the <code>&#123;&#123;froala-editor&#125;&#125;</code> component. Checkout the <a href="https://github.com/froala/ember-froala-editor" target="_blank">Github page</a> to take a look at the code and to <a href="https://github.com/froala/ember-froala-editor/issues" target="_blank">submit issues</a>.
+      Bring the <a href="https://www.froala.com/wysiwyg-editor" target="_blank">Froala WYSIWYG Editor</a> into an ember-cli project with this addon. Besides importing the required Froala Editor files, the <em>main</em> part of this addon is the <code class="bg-light text-dark">&#123;&#123;froala-editor&#125;&#125;</code> component. Checkout the <a href="https://github.com/froala/ember-froala-editor" target="_blank">Github page</a> to take a look at the code and to <a href="https://github.com/froala/ember-froala-editor/issues" target="_blank">submit issues</a>.
     </p>
 
 
@@ -18,16 +21,16 @@
     {{froala-editor options=exampleOptions}}
 
 
-  </div>{{!-- .panel-body --}}
-</section>{{!-- .panel --}}
+  </div>{{!-- .card-body --}}
+</section>{{!-- .card --}}
 
 
 
 
-<section class="panel panel-default visible-xs-block">
+<section class="card d-flex d-md-none">
   <nav class="list-group">
-    {{link-to "Addon Information" "addon.index" class="list-group-item"}}
-    {{link-to "Included Components" "addon-components.index" class="list-group-item"}}
-    {{link-to "Included Helpers" "addon-helpers.index" class="list-group-item"}}
+    {{link-to "Addon Information" "addon.index" class="list-group-item list-group-item-action"}}
+    {{link-to "Included Components" "addon-components.index" class="list-group-item list-group-item-action"}}
+    {{link-to "Included Helpers" "addon-helpers.index" class="list-group-item list-group-item-action"}}
   </nav>
-</section>{{!-- .panel --}}
+</section>{{!-- .card --}}
