--- a/tests/dummy/app/templates/addon/configuration.hbs
+++ b/tests/dummy/app/templates/addon/configuration.hbs
@@ -53,7 +53,7 @@ module.exports = function(defaults) {
       </tr>
       <tr>
         <th scope="row">plugins</th>
-        <td><code class="bg-light text-dark">true</code></td>
+        <td><code class="bg-light text-dark">false</code></td>
         <td><a href="https://www.froala.com/wysiwyg-editor/docs/plugins" target="_blank">Plugin files</a> to be imported, use the file name specified in the "JS to include" column but without the ".min.js" extension. Ex: <code class="bg-light text-dark">'paragraph_format'</code> Note: The associated CSS will also be imported when available</td>
       </tr>
       <tr>
