--- a/addon/templates/components/froala-editor.hbs
+++ b/addon/templates/components/froala-editor.hbs
@@ -1,3 +1,3 @@
 {{!-- 'content' changes will be updated directly on the editor instance --}}
 {{!-- https://www.froala.com/wysiwyg-editor/docs/methods#html.set --}}
-<div class="froala-editor-instance">{{{_templateContent}}}</div>
+<div class="froala-editor-instance">{{_templateContent}}</div>
