--- a/tests/dummy/app/templates/addon/installation.hbs
+++ b/tests/dummy/app/templates/addon/installation.hbs
@@ -19,7 +19,7 @@
 
 
     <p>
-      A dependency for <code class="bg-light text-dark"><a href="https://github.com/martndemus/ember-font-awesome" target="_blank">ember-font-awesome</a></code> will be added to your projects <code class="bg-light text-dark">package.json</code> to satisfy the <a href="https://www.froala.com/wysiwyg-editor/docs/overview#backend" target="_blank">Font Awesome requirement</a>. The Froala Editor files will be imported directly from this addons dependency for <code class="bg-light text-dark">froala-editor</code>. And at this point jQuery is required for Ember, so there is no need to add a jQuery dependency.
+      A dependency for <code class="bg-light text-dark"><a href="https://github.com/martndemus/ember-font-awesome" target="_blank">ember-font-awesome</a></code> will be added to your projects <code class="bg-light text-dark">package.json</code> to satisfy the <a href="https://www.froala.com/wysiwyg-editor/docs/overview#backend" target="_blank">Font Awesome requirement</a>. The Froala Editor files will be imported directly from this addons dependency for <code class="bg-light text-dark">froala-editor</code>. Additionally, the jQuery import will be enforced by this addon since the Froala Editor requires jQuery at this point.
     </p>
 
 
