<FroalaEditor> fastboot support
With the help of @pzuraq, we came up with this to get around the fact that modifiers do not run in fastboot.

--- a/addon/components/froala-editor.hbs
+++ b/addon/components/froala-editor.hbs
@@ -4,5 +4,9 @@
   {{did-update this.updateContent @content}}
   {{will-destroy this.destroyEditor}}
 >
-  {{this.content}}
+  {{#if this.fastboot.isFastboot}}
+    {{this.fastbootContent}}
+  {{else}}
+    {{this.content}}
+  {{/if}}
 </div>
