Content changes are now updated via innerHTML
Glimmer VM still doesn't like how Froala Editor modifies DOM so any `@content` changes must go through `innerHTML` instead of a bound property.

--- a/addon/components/froala-editor.hbs
+++ b/addon/components/froala-editor.hbs
@@ -5,8 +5,8 @@
   {{will-destroy this.destroyEditor}}
 >
   {{#if this.fastboot.isFastboot}}
-    {{this.fastbootContent}}
-  {{else}}
     {{this.content}}
+  {{else}}
+    {{unbound this.content}}
   {{/if}}
 </div>
