--- a/addon/components/froala-editor.hbs
+++ b/addon/components/froala-editor.hbs
@@ -7,6 +7,7 @@
   {{#if this.fastboot.isFastboot}}
     {{this.content}}
   {{else}}
+    {{! template-lint-disable no-unbound }}
     {{unbound this.content}}
   {{/if}}
 </div>
